--- a/src/MT-RxSwiftLearning/MT-RxSwiftLearning/Base.lproj/Main.storyboard
+++ b/src/MT-RxSwiftLearning/MT-RxSwiftLearning/Base.lproj/Main.storyboard
@@ -1,24 +1,148 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--LoginVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="BYZ-38-t0r" customClass="LoginVC" customModule="MT_RxSwiftLearning" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="L">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="p6s-N5-eNV">
+                                <rect key="frame" x="30" y="142" width="354" height="222"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cUK-az-WhN">
+                                        <rect key="frame" x="0.0" y="0.0" width="354" height="101"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="用户名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLT-gq-cL2">
+                                                <rect key="frame" x="0.0" y="0.0" width="354" height="36"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="36" id="aWK-Km-Od8"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请填写用户名称" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dga-CJ-ciC">
+                                                <rect key="frame" x="0.0" y="41" width="354" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="MTd-hv-1GZ"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="用户名称错误" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9QH-Yk-m6v">
+                                                <rect key="frame" x="0.0" y="81" width="354" height="20"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="20" id="NIg-gB-nhu"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="9QH-Yk-m6v" firstAttribute="top" secondItem="dga-CJ-ciC" secondAttribute="bottom" constant="10" id="6hF-rZ-rr0"/>
+                                            <constraint firstItem="hLT-gq-cL2" firstAttribute="top" secondItem="cUK-az-WhN" secondAttribute="top" id="9OV-U6-6RW"/>
+                                            <constraint firstAttribute="bottom" secondItem="9QH-Yk-m6v" secondAttribute="bottom" id="Bbp-tv-3Ac"/>
+                                            <constraint firstItem="dga-CJ-ciC" firstAttribute="top" secondItem="hLT-gq-cL2" secondAttribute="bottom" constant="5" id="Jkp-KU-2XK"/>
+                                            <constraint firstAttribute="trailing" secondItem="hLT-gq-cL2" secondAttribute="trailing" id="O4A-9h-ibt"/>
+                                            <constraint firstItem="9QH-Yk-m6v" firstAttribute="top" secondItem="dga-CJ-ciC" secondAttribute="bottom" constant="10" id="RZL-jh-46B"/>
+                                            <constraint firstItem="dga-CJ-ciC" firstAttribute="top" secondItem="hLT-gq-cL2" secondAttribute="bottom" constant="5" id="RgU-fa-Na9"/>
+                                            <constraint firstAttribute="trailing" secondItem="9QH-Yk-m6v" secondAttribute="trailing" id="YVm-Uu-SxJ"/>
+                                            <constraint firstItem="9QH-Yk-m6v" firstAttribute="leading" secondItem="cUK-az-WhN" secondAttribute="leading" id="Z7Q-Qk-k8s"/>
+                                            <constraint firstAttribute="trailing" secondItem="dga-CJ-ciC" secondAttribute="trailing" id="iON-SH-v5E"/>
+                                            <constraint firstItem="hLT-gq-cL2" firstAttribute="leading" secondItem="cUK-az-WhN" secondAttribute="leading" id="qKX-bV-BuJ"/>
+                                            <constraint firstItem="dga-CJ-ciC" firstAttribute="leading" secondItem="cUK-az-WhN" secondAttribute="leading" id="yey-0S-ZYi"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KC0-7u-s8c">
+                                        <rect key="frame" x="0.0" y="121" width="354" height="101"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mJ-qK-nM5">
+                                                <rect key="frame" x="0.0" y="0.0" width="354" height="36"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="36" id="4IO-Y8-OBk"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请填写密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c0p-G1-Ryw">
+                                                <rect key="frame" x="0.0" y="41" width="354" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="pUT-sW-KFE"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码错误" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="77b-dW-AA7">
+                                                <rect key="frame" x="0.0" y="81" width="354" height="20"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="20" id="fBM-XP-53Y"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="77b-dW-AA7" secondAttribute="trailing" id="50s-Da-l7h"/>
+                                            <constraint firstItem="c0p-G1-Ryw" firstAttribute="top" secondItem="8mJ-qK-nM5" secondAttribute="bottom" constant="5" id="8vy-LE-BMG"/>
+                                            <constraint firstAttribute="trailing" secondItem="c0p-G1-Ryw" secondAttribute="trailing" id="CCn-fA-1e6"/>
+                                            <constraint firstAttribute="trailing" secondItem="8mJ-qK-nM5" secondAttribute="trailing" id="G6z-Dt-zVF"/>
+                                            <constraint firstItem="c0p-G1-Ryw" firstAttribute="leading" secondItem="KC0-7u-s8c" secondAttribute="leading" id="HIq-Gh-XqU"/>
+                                            <constraint firstItem="77b-dW-AA7" firstAttribute="top" secondItem="c0p-G1-Ryw" secondAttribute="bottom" constant="10" id="KKf-UL-13M"/>
+                                            <constraint firstItem="c0p-G1-Ryw" firstAttribute="top" secondItem="8mJ-qK-nM5" secondAttribute="bottom" constant="5" id="VFL-Tz-Hpi"/>
+                                            <constraint firstItem="8mJ-qK-nM5" firstAttribute="leading" secondItem="KC0-7u-s8c" secondAttribute="leading" id="boX-MX-EGs"/>
+                                            <constraint firstAttribute="bottom" secondItem="77b-dW-AA7" secondAttribute="bottom" id="hpb-7j-Vba"/>
+                                            <constraint firstItem="77b-dW-AA7" firstAttribute="leading" secondItem="KC0-7u-s8c" secondAttribute="leading" id="n8X-h0-d6S"/>
+                                            <constraint firstItem="77b-dW-AA7" firstAttribute="top" secondItem="c0p-G1-Ryw" secondAttribute="bottom" constant="10" id="uzb-Q4-IJc"/>
+                                            <constraint firstItem="8mJ-qK-nM5" firstAttribute="top" secondItem="KC0-7u-s8c" secondAttribute="top" id="zcQ-AU-5T9"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dox-6U-VS2">
+                                <rect key="frame" x="30" y="394" width="354" height="36"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="TVm-WE-Pn0"/>
+                                </constraints>
+                                <state key="normal" title="登录"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="p6s-N5-eNV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="UEq-fZ-g99"/>
+                            <constraint firstItem="dox-6U-VS2" firstAttribute="top" secondItem="p6s-N5-eNV" secondAttribute="bottom" constant="30" id="dA7-x9-DSg"/>
+                            <constraint firstItem="dox-6U-VS2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="ins-Zi-Vqk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dox-6U-VS2" secondAttribute="trailing" constant="30" id="lsV-XQ-Led"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p6s-N5-eNV" secondAttribute="trailing" constant="30" id="n5H-hY-2lr"/>
+                            <constraint firstItem="p6s-N5-eNV" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-200" id="rq8-EK-4CZ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="loginButton" destination="dox-6U-VS2" id="N7t-pk-OX8"/>
+                        <outlet property="passwordTextField" destination="c0p-G1-Ryw" id="Cwd-bl-4g7"/>
+                        <outlet property="passwordValidLabel" destination="77b-dW-AA7" id="m4r-0f-sXe"/>
+                        <outlet property="userNameTextField" destination="dga-CJ-ciC" id="oC6-Yn-mKi"/>
+                        <outlet property="userNameValidLabel" destination="9QH-Yk-m6v" id="gfc-aC-Ozh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-561" y="-3"/>
         </scene>
     </scenes>
 </document>
