--- a/src/MT-RxSwiftLearning/MT-RxSwiftLearning/Base.lproj/Main.storyboard
+++ b/src/MT-RxSwiftLearning/MT-RxSwiftLearning/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="p6s-N5-eNV">
-                                <rect key="frame" x="30" y="142" width="354" height="222"/>
+                                <rect key="frame" x="30" y="342" width="354" height="222"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cUK-az-WhN">
                                         <rect key="frame" x="0.0" y="0.0" width="354" height="101"/>
@@ -113,7 +113,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dox-6U-VS2">
-                                <rect key="frame" x="30" y="394" width="354" height="36"/>
+                                <rect key="frame" x="30" y="594" width="354" height="36"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="TVm-WE-Pn0"/>
@@ -128,7 +128,7 @@
                             <constraint firstItem="dox-6U-VS2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="ins-Zi-Vqk"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dox-6U-VS2" secondAttribute="trailing" constant="30" id="lsV-XQ-Led"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p6s-N5-eNV" secondAttribute="trailing" constant="30" id="n5H-hY-2lr"/>
-                            <constraint firstItem="p6s-N5-eNV" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-200" id="rq8-EK-4CZ"/>
+                            <constraint firstItem="p6s-N5-eNV" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="rq8-EK-4CZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
